yaml: wbo pinout: replace Vm with more common Vs/Ip name
grep 'Vm ' --include='*.yaml' -rlZ . | xargs -0 sed -i 's/Vm /Vs\/Ip (Vm) /g'

--- a/firmware/config/boards/hellen/alphax-8chan-revA/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan-revA/connectors/8chan-A-B.yaml
@@ -260,7 +260,7 @@ pins:
     color: red
 
   - pin: 5B
-    function: WBO1 Vm (pin 2)
+    function: WBO1 Vs/Ip (Vm) (pin 2)
     type: wbo
     color: yellow
 
@@ -294,7 +294,7 @@ pins:
     color: red
 
   - pin: 11B
-    function: WBO2 Vm (pin 2)
+    function: WBO2 Vs/Ip (Vm) (pin 2)
     type: wbo
     color: yellow
 
