--- a/firmware/config/boards/hellen/uaefi/connectors/E.yaml
+++ b/firmware/config/boards/hellen/uaefi/connectors/E.yaml
@@ -12,7 +12,7 @@ pins:
     type: wbo
 
   - pin: E6
-    function: WBO Vm (pin 2)
+    function: WBO Vs/Ip (Vm) (pin 2)
     type: wbo
     color: yellow
 
