--- a/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
+++ b/firmware/config/boards/hellen/alphax-silver-revA/connectors/alphax-silver.yaml
@@ -221,7 +221,7 @@ pins:
     color: green
 
   - pin: 33A
-    function: WBO Un (pin 6)
+    function: WBO Vs (Un) (pin 6)
     type: wbo
     color: black
 
