This commit does not modify any running engine variables, this just sets up receiving the command and modifying the variables that will be used later, as well as add the UI
Canbus BUTTON box support:
this is hooked into the bench test portion of serial code, the fact that a TS button is just sending a ZAABB command with a CRC behind it, there are now two new AA, one for receiving KEYCODE over canbus serial encapsulation, and one for receiving button function id from TS. there is also a lookup table to connect keycode received to function id. in essence, clicking a TS button calls that function, sending a keycode over canbus using same method does the same through a lookup table. lookup table is a curve with FUNC, KEYCODE
the current CANBUS button box functions are:

these are in engine_types.h

    ETB_MAP_UP,
    ETB_MAP_DOWN,
    ETB_MAP_RESET,
    ETB_MAP_1,
    ETB_MAP_2,
    ETB_MAP_3,
    ETB_MAP_4,
    AFR_TRIM_UP,
    AFR_TRIM_DOWN,
    AFR_TRIM_RESET,
    AFR_TRIM_MAX,
    AFR_TRIM_MIN,
    ALL_TRIM_RESET,  -- reset all CANBUS button box adjustables to their defaults (EXCEPT inhibited ones)
    CAN_BUTTON_TOGGLE1, // launch control enable
    CAN_BUTTON_TOGGLE2, // DFCO INVERT !
    CAN_BUTTON_TOGGLE3, // canbox idleup
    CAN_BUTTON_TOGGLE4, // air conditioning
    CAN_BUTTON_TOGGLE5,
    CAN_BUTTON_TOGGLE6,
    CAN_BUTTON_TOGGLE7,
    CAN_BUTTON_TOGGLE8,
    CAN_LUA_COMMAND_1, - click lua command 1 button
    CAN_LUA_COMMAND_2, - click lua command 2 button
    CAN_LUA_COMMAND_3, - click lua command 3 button
    CAN_LUA_COMMAND_4, - click lua command 4 button

A key code is sent by a small ESP32-S3-USB-OTG dongle with a USB keypad, nothing too complicated yet. State of CAN BUTTON TOGGLES is reflected ina Canbutton18 port for Programmable ports to check for that functionality.

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1560,6 +1560,8 @@ gaugeCategory = Trigger
 
 gaugeCategory = Test Bench
 	testBenchIterGauge = testBenchIter, "Test Bench Iterations", "count", -10, {benchTestCount + 10}, -5, 0, {benchTestCount}, {benchTestCount + 5}, 1, 1
+	lastCanButtonSeenGauge = lastCanButtonSeen, "Last hardware Can button pressed", "keycode", 0, 65535, 0, 0, 65535, 65535, 0, 0
+	lastCanButtonIdxGauge = lastCanButtonFoundIdx, "Last hardware Can button lookup result function id", "keycode", 0, 65535, 0, 0, 65535, 65535, 0, 0
 
 gaugeCategory = LUA
 	luaInvocationCounterGauge = luaInvocationCounter,"luaInvocationCounter", "count", 0.0,0.0, 0.0,0.0, 0.0,0.0, 0,0
@@ -2345,6 +2347,11 @@ menuDialog = main
 		subMenu = egtInputsCan,				"CAN EGT sensors"@@if_ts_show_top_level_can_menu
 		subMenu = msIoBox,					"CAN MS IO-Box Settings"@@if_ts_show_top_level_can_menu
 
+		subMenu = std_separator@@if_ts_show_top_level_can_menu
+   	    subMenu = buttonBoxButtons, "Virtual Button Box"@@if_ts_show_top_level_can_menu
+	    subMenu = canButtonConfig, "CAN Button Box Config"@@if_ts_show_top_level_can_menu
+
+
 	menu = "&Controller"
 		subMenu = ecuStimulator,			"ECU stimulator"
 		subMenu = ioTest,					"Bench test"
@@ -2468,6 +2475,35 @@ cmd_test_sol3 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SOLENOID_CATEGORY_
 cmd_test_sol4 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SOLENOID_CATEGORY_16_hex@@\x00\x04"
 cmd_test_sol5 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SOLENOID_CATEGORY_16_hex@@\x00\x05"
 cmd_test_sol6 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SOLENOID_CATEGORY_16_hex@@\x00\x06"
+
+cmd_buttonbox_etb_map_up         = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x00"
+cmd_buttonbox_etb_map_down       = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x01"
+cmd_buttonbox_etb_map_reset      = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x02"
+cmd_buttonbox_etb_map_1          = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x03"
+cmd_buttonbox_etb_map_2          = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x04"
+cmd_buttonbox_etb_map_3          = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x05"
+cmd_buttonbox_etb_map_4          = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x06"
+cmd_buttonbox_afr_trim_up        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x07"
+cmd_buttonbox_afr_trim_down      = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x08"
+cmd_buttonbox_afr_trim_reset     = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x09"
+cmd_buttonbox_afr_trim_max       = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0A"
+cmd_buttonbox_afr_trim_min       = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0B"
+cmd_buttonbox_all_trim_reset     = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0C"
+
+cmd_buttonbox_can_button_toggle1 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0D"
+cmd_buttonbox_can_button_toggle2 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0E"
+cmd_buttonbox_can_button_toggle3 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x0F"
+cmd_buttonbox_can_button_toggle4 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x10"
+cmd_buttonbox_can_button_toggle5 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x11"
+cmd_buttonbox_can_button_toggle6 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x12"
+cmd_buttonbox_can_button_toggle7 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x13"
+cmd_buttonbox_can_button_toggle8 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x14"
+
+cmd_buttonbox_can_lua_command_1 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x15"
+cmd_buttonbox_can_lua_command_2 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x16"
+cmd_buttonbox_can_lua_command_3 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x17"
+cmd_buttonbox_can_lua_command_4 = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BUTTONBOX1_CATEGORY_16_hex@@\x00\x18"
+
 
 cmd_test_main_relay			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_MAIN_RELAY_16_hex@@"
 cmd_test_fuel_pump				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_FUEL_PUMP_16_hex@@"
@@ -4035,6 +4071,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Dashpot coasting-to-idle Initial idle Adder",	    iacByTpsTaper
 		field = "Dashpot coasting-to-idle Hold time", iacByTpsHoldTime
 		field = "Dashpot coasting-to-idle Decay time", iacByTpsDecayTime
+		field = "Canbox extra idleup target RPM adder", canBoxIdleUpRpm
+		field = "Canbox extra idleup % adder", canBoxIdleUpPercentage
 
 	dialog = idleSettings, "", yAxis
 		field = "Idle control mode",					idleMode, { !modeledFlowIdle }
@@ -5640,6 +5678,71 @@ dialog = tcuControls, "Transmission Settings"
 	dialog = OutputDiagDialog, "Output diagnostic", xAxis
 		panel = IgnitionDiagPanel
 		panel = InjectionDiagPanel
+
+dialog = canButtonConfigFields, "id", yAxis
+		runtimeValue = "Last button ID lookup", lastCanButtonFoundIdx
+		runtimeValue = "Last button pressed",	lastCanButtonSeen
+		field = "ETB Map switch"
+		field = "0  =  ETB_MAP_UP       next map   "
+		field = "1  =  ETB_MAP_DOWN     previous map "
+	    field = "2  =  ETB_MAP_RESET    reset to default  "
+	    field = "3  =  ETB_MAP_1         #1        "
+	    field = "4  =  ETB_MAP_2         #2        "
+	    field = "5  =  ETB_MAP_3         #3        "
+	    field = "6  =  ETB_MAP_4         #4        "
+	    field = "7  =  AFR_TRIM_UP    (leaner)     "
+	    field = "8  =  AFR_TRIM_DOWN  (richer)     "
+	    field = "9  =  AFR_TRIM_RESET   reset      "
+	    field = "10 =  AFR_TRIM_MAX    (leanest)   "
+	    field = "11 =  AFR_TRIM_MIN    (richest)   "
+		field = "12 =  ALL_TRIM_RESET        ( reset ALL trims and toggles except ones marked below ) "
+		field = "13 =  CAN_BUTTON_TOGGLE1      - launch control override  "
+		field = "14 =  CAN_BUTTON_TOGGLE2      - dfco invert   "
+		field = "15 =  CAN_BUTTON_TOGGLE3      - canbox idleup    "
+		field = "16 =  CAN_BUTTON_TOGGLE4      - air conditioning    "
+		field = "17 =  CAN_BUTTON_TOGGLE5          "
+		field = "18 =  CAN_BUTTON_TOGGLE6          "
+		field = "19 =  CAN_BUTTON_TOGGLE7          "
+		field = "20 =  CAN_BUTTON_TOGGLE8          "
+		field = "21 =  CAN_LUA_COMMAND_1          "
+		field = "22 =  CAN_LUA_COMMAND_2          "
+		field = "23 =  CAN_LUA_COMMAND_3          "
+		field = "24 =  CAN_LUA_COMMAND_4          "
+
+		field = "Do not reset LAUNCH OVERRIDE", resetCanToggleInhibit2
+		field = "Do not reset DFCO INVERT", resetCanToggleInhibit1
+		field = "Do not reset CANBOX IDLEUP", resetCanToggleInhibit3
+		field = "Do not reset AIR CONDITIONING", resetCanToggleInhibit4
+		field = "Do not reset TOGGLE5", resetCanToggleInhibit5
+		field = "Do not reset TOGGLE6", resetCanToggleInhibit6
+		field = "Do not reset TOGGLE7", resetCanToggleInhibit7
+		field = "Do not reset TOGGLE8", resetCanToggleInhibit8
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+		field = ""
+
+
+		dialog = buttonBoxCmdCurvePanel, "", yAxis
+
+			panel = buttonBoxCmdCurve
+
+
+dialog = canButtonConfig, "Can Button Config", xAxis
+		panel = canButtonConfigFields
+		panel = buttonBoxCmdCurvePanel
+
 
 [Tools]
  ;addTool = toolName, PanelName
