--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2701,8 +2701,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		; todo: https://github.com/rusefi/rusefi/issues/2077
 
 		field = @@CAM_1_MODE_NAME@@,				vvtMode1, {trigger_type != @@trigger_type_e_TT_MAZDA_MIATA_NA@@}
-		field = "2JZ Position",                     camDecoder2jzPosition, 1, {vvtMode1 == @@vvt_mode_e_VVT_TOYOTA_3_TOOTH@@}
-		field = "2JZ Precision",                    camDecoder2jzPrecision, 1, {vvtMode1 == @@vvt_mode_e_VVT_TOYOTA_3_TOOTH@@}
+		field = "2JZ Tooth Detection Position",                     camDecoder2jzPosition, 1, {vvtMode1 == @@vvt_mode_e_VVT_TOYOTA_3_TOOTH@@}
+		field = "2JZ Detection Precision",                    camDecoder2jzPrecision, 1, {vvtMode1 == @@vvt_mode_e_VVT_TOYOTA_3_TOOTH@@}
 		field = @@CAM_2_MODE_NAME@@,				vvtMode2, {trigger_type != @@trigger_type_e_TT_MAZDA_MIATA_NA@@}@@if_ts_show_cam2
 		field = ""
 		field = @@CAM_INPUT_1_1_NAME@@,			camInputs1, { camInputs1 != 0 || (vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ ) }
