Even simpler (GDI?) injector model #7795 only:alphax-4k-gdi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1485,6 +1485,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins	= hpfpFuelMassCompensationFuelPressure, highFuelPressure
 		zBins	= hpfpFuelMassCompensation
 
+	table = injectorFlowLinearizationTable, injectorFlowLinearizationTableId, "Plain Injector Model", 1
+		xyLabels	= "mg", "BAR"
+		xBins	= injectorFlowLinearizationFuelMassBins, running_baseFuel
+		yBins	= injectorFlowLinearizationPressureBins, highFuelPressure
+		zBins	= injectorFlowLinearization
+
 	table = postCrankingEnrichmentTbl, postCrankingEnrichmentMap, "After start enrichment", 1
 		xyLabels	= "Engine Cycles", "Coolant Temp"
 		xBins		= postCrankingDurationBins, revolutionCounterSinceStart
@@ -2039,6 +2045,7 @@ menuDialog = main
 		subMenu = injectionSettings,		"Injection hardware", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_injection_hardware
 		subMenu = cylinderBankSelect,		"Cylinder bank selection", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_cylinder_bank
 		subMenu = injectorNonlinear,		"Injector small-pulse correction", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = injectorFlowLinearizationTable, {isInjectionEnabled == 1}
 
 		subMenu = stagedInjection,			"Staged injection", 0, {isInjectionEnabled}@@if_ts_show_staged_injection
 		subMenu = stagedInjectionOutputs,	"Staged injection outputs", 0, {isInjectionEnabled && enableStagedInjection}@@if_ts_show_staged_injection
@@ -2896,7 +2903,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = injectorConfig, "", yAxis
 		topicHelp = "fuelHelp"
 		panel = baseInjection
-		panel = injChars
+		field = useInjectorFlowLinearizationTable, useInjectorFlowLinearizationTable
+		panel = injChars, { ! useInjectorFlowLinearizationTable}
 		panel = fuelParams
 		panel = injectorsDeadTime, {isInjectionEnabled}
 
