--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2045,7 +2045,7 @@ menuDialog = main
 		subMenu = injectionSettings,		"Injection hardware", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_injection_hardware
 		subMenu = cylinderBankSelect,		"Cylinder bank selection", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_cylinder_bank
 		subMenu = injectorNonlinear,		"Injector small-pulse correction", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = injectorFlowLinearizationTable, {isInjectionEnabled == 1}
+		subMenu = injectorFlowLinearizationTable, "Injector Flow Linearization", {isInjectionEnabled == 1}
 
 		subMenu = stagedInjection,			"Staged injection", 0, {isInjectionEnabled}@@if_ts_show_staged_injection
 		subMenu = stagedInjectionOutputs,	"Staged injection outputs", 0, {isInjectionEnabled && enableStagedInjection}@@if_ts_show_staged_injection
