EWG vs IdleValve: divide, start populationg EWG config dialog

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2238,8 +2238,8 @@ menuDialog = main
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
 
 		subMenu = std_separator				@@if_ts_show_etb
-		subMenu = ewgPid,					"Electronic Wastegate actuator", { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb
-		subMenu = ewgBiasCurve,				"EWG bias curve (feed forward)", { 1 }, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb_bias_curve
+		subMenu = ewgDialog,				"Electronic Wastegate actuator", { (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && isBoostControlEnabled } @@if_ts_show_etb
+		subMenu = ewgBiasCurve,				"EWG bias curve (feed forward)", { (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && isBoostControlEnabled } @@if_ts_show_etb_bias_curve
 
 		subMenu = std_separator@@if_ts_show_vvt_output
 		subMenu = vvtPidDialog,				"VVT outputs and PID", { vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_vvt_output
@@ -2318,6 +2318,9 @@ menuDialog = main
 		subMenu = widebandConfig,			"rusEFI Wideband Controller", 0, { canReadEnabled && canWriteEnabled }@@if_ts_show_can_wbo
 		subMenu = std_separator
 
+		subMenu = idleValvePosDialog,		"ETB-style Idle valve position sensor", { etbFunctions1 == @@dc_function_e_DC_IdleValve@@ || etbFunctions2 == @@dc_function_e_DC_IdleValve@@ }, { 1 }
+		subMenu = std_separator
+
 		# SENT interface
 		subMenu = sentInputs,				"SENT inputs"@@if_ts_show_sent
 		subMenu = std_separator@@if_ts_show_sent
@@ -2335,7 +2338,7 @@ menuDialog = main
 
 		groupMenu = "Turbo sensors"
 		groupChildMenu = egtInputs,							"EGT" @@if_ts_show_egt
-		groupChildMenu = wastegateIdlePos,					"Wastegate and idle position sensors"@@if_ts_show_wastegate_sensor
+		groupChildMenu = wastegatePosDialog,				"Electronic Wastegate position sensor", { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ }, { 1 }@@if_ts_show_wastegate_sensor
 		groupChildMenu = compressorDischargeTemperature,	"Compressor discharge temp"@@if_ts_show_compressor_sensor
 
 		groupMenu = "Aux sensors"
@@ -3313,29 +3316,31 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = tpsSensorLeft, West
 		panel = tpsGauges, East
 
-	dialog = wastegatePosConfig, "Wastegate position sensor"
-		field = "Input",							wastegatePositionSensor
+	dialog = wastegatePosConfig, ""
+		field = "Input",								wastegatePositionSensor
 		field = "Min (fully closed, most boost)",		wastegatePositionMin
 		field = "Max (fully open, least boost)",		wastegatePositionMax
 
-	dialog = idlePosConfig, "Idle position sensor"
+	dialog = wastegatePosGauges, ""
+		gauge = rawWastegatePositionGauge, West
+		gauge = wastegatePosGauge, East
+
+	dialog = wastegatePosDialog, "Electronic Wastegate position sensor", border
+		panel = wastegatePosConfig, West
+		panel = wastegatePosGauges, East
+
+	dialog = idleValvePosConfig, ""
 		field = "Input",							    idlePositionChannel
 		field = "Min (valve closed, low idle)",			idlePositionMin
 		field = "Max (valve open, high idle)",			idlePositionMax
 
-	dialog = wastegateIdlePosLeft, ""
-		panel = wastegatePosConfig
-		panel = idlePosConfig
-
-	dialog = wastegateIdlePosGauges, ""
-		gauge = rawWastegatePositionGauge, West
-		gauge = wastegatePosGauge, East
+	dialog = idleValvePosGauges, ""
 		gauge = rawIdlePositionSensorGauge
 		gauge = idlePosSensGauge
 
-	dialog = wastegateIdlePos, "", border
-		panel = wastegateIdlePosLeft, West
-		panel = wastegateIdlePosGauges, East
+	dialog = idleValvePosDialog, "ETB-style Idle valve position sensor", border
+		panel = idleValvePosConfig, West
+		panel = idleValvePosGauges, East
 
   dialog = tractionIgnitionSkipDialog, "Traction Ignition Skip"
     field = useHardSkipInTraction,  useHardSkipInTraction
@@ -4985,16 +4990,6 @@ dialog = tcuControls, "Transmission Settings"
 			dialog = boostTargetDialog, "", card
 					panel = boostClosedTbl
 
-	dialog = ewgPid, ""
-		field = "This PID is controlling how Electronic Wastegate Actuator DC motor reaches desired position"
-		field = ""
-		field = "!This section is for advanced users only!"
-		field = "P gain",							etbWastegatePid_pFactor,  { isBoostControlEnabled }
-		field = "I gain",							etbWastegatePid_iFactor,  { isBoostControlEnabled }
-		field = "D gain",							etbWastegatePid_dFactor,  { isBoostControlEnabled }
-		field = "PID min",							etbWastegatePid_minValue, { isBoostControlEnabled }
-		field = "PID max",							etbWastegatePid_maxValue, { isBoostControlEnabled }
-
 	dialog = msIoBox1, "MS IO box 1"
 		field = "Base CAN identifier", msIoBox0_id
 		field = "VSS settings", msIoBox0_vss, { msIoBox0_id }
@@ -5106,7 +5101,7 @@ dialog = tcuControls, "Transmission Settings"
 		panel = etbIndicatorPanel
 ;		commandButton = "Reset ETB", cmd_etb_reset
 
-	dialog = etbAutotune, "PID Autotune"
+	dialog = etbAutotune, "Sensor/PID autotune"
 		field = "First step: calibrate TPS and hit 'Burn'"
 		field = "should first OPEN, then CLOSE"
 		commandButton = "Auto Calibrate ETB 1", cmd_etb_auto_calibrate,   {hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@) && tps1_1AdcChannel != @@ADC_CHANNEL_NONE@@ && calibrationMode == @@TsCalMode_None@@}
@@ -5125,6 +5120,32 @@ dialog = tcuControls, "Transmission Settings"
 		topicHelp = "etbHelp"
 		panel = etbDialogLeft, West
 		panel = etbDialogRight, East
+
+	dialog = ewgPidDialog, "PID settings"
+		field = "This PID is controlling how EWG Actuator DC motor reaches desired position"
+		field = ""
+		field = "!This section is for advanced users only!"
+		field = "P gain",							etbWastegatePid_pFactor
+		field = "I gain",							etbWastegatePid_iFactor
+		field = "D gain",							etbWastegatePid_dFactor
+		field = "PID min",							etbWastegatePid_minValue
+		field = "PID max",							etbWastegatePid_maxValue
+
+	dialog = ewgDialogLeft
+		field = "No one lives here"
+
+	dialog = ewgAutotune, "Sensor autotune"
+		field = "First step: calibrate EWG position sensor and hit 'Burn'"
+		commandButton = "Auto Calibrate ETB 2", cmd_ewg_auto_calibrate_1, {hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
+		commandButton = "Fast Auto Calibrate ETB 2", cmd_ewg_auto_calibrate_1_fast, { hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
+
+	dialog = ewgDialogRight
+		panel = ewgPidDialog, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ }
+		panel = ewgAutotune
+
+	dialog = ewgDialog, "Electronic Wastegate actuator", border
+		panel = ewgDialogLeft, West
+		panel = ewgDialogRight, East
 
 	dialog = testSpark, "Spark"
 		commandButton = @@COIL_1_NAME@@,  cmd_test_spk1
