TS: EWG position sensor calibration commands/buttons

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2512,6 +2512,8 @@ cmd_disable_self_stim		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_he
 cmd_etb_autotune_stop		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_STOP_AUTOTUNE_16_hex@@"
 cmd_etb_auto_calibrate_2	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_AUTOCAL_1_16_hex@@"
 cmd_etb_auto_calibrate_2_fast	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_AUTOCAL_1_FAST_16_hex@@"
+cmd_ewg_auto_calibrate_1	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_EWG_AUTOCAL_0_16_hex@@"
+cmd_ewg_auto_calibrate_1_fast	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_EWG_AUTOCAL_0_FAST_16_hex@@"
 cmd_wideband_firmare_update  = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x12"
 cmd_enable_ext_stim			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_EXTERNAL_TRIGGER_STIMULATOR_ENABLE_16_hex@@"
 cmd_etb_disable_jam_detect	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_DISABLE_JAM_DETECT_16_hex@@"
