--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -301,6 +301,9 @@ enable2ndByteCanID = false
 	maintainConstantValue = throttlePedalWOTVoltage, { (calibrationMode == @@TsCalMode_PedalMax@@ ) ? calibrationValue  : throttlePedalWOTVoltage }
 	maintainConstantValue = throttlePedalSecondaryWOTVoltage, { (calibrationMode == @@TsCalMode_PedalMax@@ ) ? calibrationValue2 : throttlePedalSecondaryWOTVoltage }
 
+	maintainConstantValue = wastegatePositionOpenedVoltage, { (calibrationMode == @@TsCalMode_EwgPosMax@@ ) ? calibrationValue : wastegatePositionOpenedVoltage }
+	maintainConstantValue = wastegatePositionClosedVoltage, { (calibrationMode == @@TsCalMode_EwgPosMin@@ ) ? calibrationValue : wastegatePositionClosedVoltage }
+
   requiresPowerCycle = afr_hwChannel
   requiresPowerCycle = afr_hwChannel2
 
@@ -3315,8 +3318,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = wastegatePosConfig, ""
 		field = "Input",								wastegatePositionSensor
-		field = "Min (fully closed, most boost)",		wastegatePositionMin
-		field = "Max (fully open, least boost)",		wastegatePositionMax
+		field = "Min (fully closed, most boost)",		wastegatePositionClosedVoltage
+		field = "Max (fully open, least boost)",		wastegatePositionOpenedVoltage
 
 	dialog = wastegatePosGauges, ""
 		gauge = rawWastegatePositionGauge, West
@@ -5136,8 +5139,8 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = ewgAutotune, "Sensor autotune"
 		field = "First step: calibrate EWG position sensor and hit 'Burn'"
-		commandButton = "Auto Calibrate ETB 2", cmd_ewg_auto_calibrate_1, {hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
-		commandButton = "Fast Auto Calibrate ETB 2", cmd_ewg_auto_calibrate_1_fast, { hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
+		commandButton = "Auto Calibrate EWG", cmd_ewg_auto_calibrate_1, {hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
+		commandButton = "Fast Auto Calibrate EWG", cmd_ewg_auto_calibrate_1_fast, { hasIgnitionVoltage && (etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@) && wastegatePositionSensor != @@ADC_CHANNEL_NONE@@}
 
 	dialog = ewgDialogRight
 		panel = ewgPidDialog, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ }
