HPFP iterm limits #7811 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5608,6 +5608,8 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Target decay rate", hpfpTargetDecay, {hpfpCamLobes != 0}
 		field = "Proportional gain", hpfpPidP, {hpfpCamLobes != 0}
 		field = "Integral gain", hpfpPidI, {hpfpCamLobes != 0}
+		field = "iTerm Min", hpfpPid_iTermMin, {hpfpCamLobes != 0}
+		field = "iTerm Max", hpfpPid_iTermMax, {hpfpCamLobes != 0}
 		panel = hpfpDeadtimeCurve, {hpfpCamLobes != 0}
 
 	indicatorPanel = IgnitionDiagPanel, 1, { 1 }
