cranking coolant multiplier is now cranking base fuel corrected by coolant [update TS texts] see #7567

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1500,7 +1500,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= postCrankingCLTBins, coolant
 		zBins		= postCrankingFactor
 
-	table = crankingCycleFuelMultTbl, crankingCycleFuelMultMap, "Cranking Cycle Multiplier", 1
+	table = crankingCycleFuelMultTbl, crankingCycleFuelMultMap, "Cranking Cycle Base Fuel", 1
 		xyLabels	= "Engine Cycles", "Coolant Temp"
 		xBins		= crankingCycleBins, revolutionCounterSinceStart
 		yBins		= crankingCycleFuelCltBins, coolant
@@ -2168,9 +2168,9 @@ menuDialog = main
 		subMenu = primingFuelPulsePanel,	"Priming pulse", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
+		subMenu = crankingCycleFuelMultTbl,	"Cranking Base Fuel"
 		subMenu = crankingCltCurve,			"Cranking Fuel multiplier"
 		subMenu = crankingCltCurveE100,		"Fuel Engine Temp (Flex Fuel E85)", { flexSensorPin != @@ADC_CHANNEL_NONE@@ && flexCranking }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = crankingCycleFuelMultTbl,	"Cranking Fuel duration multiplier"
 		subMenu = crankingTpsCurve,			"Cranking Fuel TPS multiplier"@@if_ts_show_crankingTpsCurve
 		subMenu = std_separator
 
